After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771487 - Nautilus segfaults on undo after failed batch rename attempts on read-only files.
Nautilus segfaults on undo after failed batch rename attempts on read-only fi...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.21.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-15 12:29 UTC by Mohammed Sadiq
Modified: 2016-09-21 20:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file: mark file with error as skipped (1.64 KB, patch)
2016-09-21 11:29 UTC, Alexandru Pandelea
none Details | Review
file: mark file with error on batch rename as skipped (1.66 KB, patch)
2016-09-21 11:30 UTC, Alexandru Pandelea
committed Details | Review

Description Mohammed Sadiq 2016-09-15 12:29:37 UTC
How to reproduce:

1. Create a folder
   mkdir test
2. Create some files inside the folder
   touch 1.txt 2.txt
3. Make the 'test' folder read only.
   chmod 455 test
4. Now in Nautilus select both 1.txt and 2.txt and batch rename to some other name. It won't, because the parent directory is read-only.
5. Now do Ctrl+Z (undo).

Nautilus now segfaults with the following error:
**
ERROR:/home/sadiq/jhbuild/checkout/nautilus/src/nautilus-file.c:713:nautilus_file_get_internal: assertion failed: (location != NULL)
Aborted (core dumped)
Comment 1 Alexandru Pandelea 2016-09-21 11:29:01 UTC
Created attachment 335984 [details] [review]
file: mark file with error as skipped

Files that give an error on renaming shouldn't be added to the undo
list, so those should be marked as skipped.
Comment 2 Alexandru Pandelea 2016-09-21 11:30:34 UTC
Created attachment 335985 [details] [review]
file: mark file with error on batch rename as skipped

Files that give an error on renaming shouldn't be added to the undo
list, so those should be marked as skipped.
Comment 3 Carlos Soriano 2016-09-21 14:24:01 UTC
Review of attachment 335985 [details] [review]:

indeed, thanks!
Comment 4 Alexandru Pandelea 2016-09-21 20:45:59 UTC
Attachment 335985 [details] pushed as 7ff0940 - file: mark file with error on batch rename as skipped