file: mark file with error on batch rename as skipped

Files that give an error on renaming shouldn't be added to the undo
list, so those should be marked as skipped.

https://bugzilla.gnome.org/show_bug.cgi?id=771487